# bevy_behave

./: CHANGELOG.md  Cargo.toml  README.md  readme.inc.md  readme.sh
examples/: README.md  basic_ifthen.rs  basic_while.rs  chase.rs  interrupt_example.rs  simple.rs
src/: behave_trigger.rs  bt.rs  ctx.rs  dyn_bundle.rs  lib.rs  main.rs  plugin.rs  tests.rs  trigger.rs
