[package]
name = "bevy_behave"
version = "0.3.0"
edition = "2024"
description = "A behaviour tree plugin for bevy with dynamic spawning."
repository = "https://github.com/RJ/bevy_behave"
documentation = "https://docs.rs/bevy_behave"
keywords = ["bevy", "tree", "ai", "game"]
license = "MIT OR Apache-2.0"
authors = ["Richard Jones <rj@metabrew.com>"]

[dependencies]
bevy = {version = "0.16", default-features = false, features = ["bevy_log"]}
dyn-clone = "1.0.18"
ego-tree = "0.10.0"

[dev-dependencies]
bevy = {version = "0.16", default-features = true}
bevy_screen_diagnostics = "0.8.1"
bevy_pancam = "0.18"
rand = "0.9.0"


[lints.clippy]
type_complexity = "allow"
